--- a/sample_yamls/debug.yaml
+++ b/sample_yamls/debug.yaml
@@ -49,7 +49,7 @@ spec:
         app: debug
     spec:
       terminationGracePeriodSeconds: 0
-      serviceAccountName: sleep
+      serviceAccountName: debug
       containers:
       - name: debug
         image: curlimages/curl
